<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questionnaireLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/q1"
    tools:context=".activities.CreateQuestionaireActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            app:srcCompat="@drawable/logo_app" />


        <EditText
            android:id="@+id/questionEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_bg"
            android:hint=" write a Question"
            android:textColor="@color/black"

            />

        <TextView
        android:id="@+id/optionsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="Enter 3 options and select correct answer radio button"
        android:textColor="@color/black"
        android:textStyle="bold"
            />

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <RadioGroup
            android:id="@+id/answerRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/answer2RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/answer3RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/option1EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Option 1"
                android:maxLines="1" />

            <EditText
                android:id="@+id/option2EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Option 2"
                android:maxLines="1" />

            <EditText
                android:id="@+id/option3EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Option 3"
                android:maxLines="1" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/timerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/enter_minutes_for_timer"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/timerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="0-999"
        android:inputType="number"
        android:maxLength="3" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendQuestionnaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/black"
            android:text="@string/send_questionnaire"
            android:textColor="@color/white"
            android:textColorHighlight="#03A9F4"
            app:cornerRadius="10sp" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveQuestionnaire"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196F3"
            android:layout_marginTop="10sp"
            android:text="@string/save_question_to_firebase"
            app:cornerRadius="10sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10sp"
            android:layout_height="match_parent"
            android:backgroundTint="#FF1100"
            android:layout_marginStart="10sp"
            android:text="@string/cancel"
            app:cornerRadius="10sp" />


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnImportQuestionnaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:backgroundTint="#DAB239"
        android:text="@string/import_questions"
        app:cornerRadius="10sp" />

    </LinearLayout>
</ScrollView>