<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E3FFEB3B"
    android:orientation="vertical"

    >

    <LinearLayout
        android:id="@+id/lyt_wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_will_show_after"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:textSize="20sp"
            android:layout_marginStart="5sp"
            android:textColor="#00BCD4"
            android:textStyle="bold"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/red"
            app:cornerRadius="20sp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        >
        <TextView
            android:id="@+id/txtTotalParticipents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Total Participents : 4"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"

            >


            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                />
            <ProgressBar
                android:layout_marginStart="15sp"
                android:id="@+id/progressCorrectAns"
                android:layout_width="15sp"
                android:layout_height="100dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/custom_progress"
                android:progress="50"
                android:progressTint="#4CAF50"
                android:layout_marginBottom="5sp"
                />
            <ProgressBar
                android:id="@+id/progressWrongAns"
                android:layout_width="15sp"
                android:layout_height="100dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/custom_progress"
                android:progress="50"
                android:layout_marginStart="20sp"
                android:progressTint="@color/red"
                android:layout_marginBottom="5sp"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:paddingStart="40sp"
                >
                <TextView
                    android:id="@+id/txtCorrectAnswers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Correct Answers : 5"
                    android:textSize="20sp"
                    android:layout_marginStart="5sp"
                    android:textColor="#4CAF50"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/txtWrongAnswers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wrong Answers : 5"
                    android:textSize="20sp"
                    android:layout_marginStart="5sp"
                    android:textColor="#FF5722"
                    android:textStyle="bold"
                    />

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="150sp"
            android:layout_height="2dp"
            android:background="@color/black"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:visibility="gone"
                android:backgroundTint="@color/green"
                app:cornerRadius="20sp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel2"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/red"
                app:cornerRadius="10sp"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>